--- a/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
@@ -88,7 +88,9 @@
 \def\equation{\@hyper@itemfalse\saved@equation}
 \makeatother 
 
-
+\addto\extrasngerman{%
+\def\subsubsectionautorefname{Beweis}%
+}
 
 % Eigene Befehle %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 % Matrix
